# Fast-BVH

./: .clang-format  .gitignore  BBox.cpp  BBox.h  BVH.cpp  BVH.h  CMakeLists.txt  Doxyfile  IntersectionInfo.h  Log.h  Makefile  Object.h  README  Ray.h  RayTracerTest.cpp  RaytracerTest.cpp  Sphere.h  Stopwatch.h  Vector3.h
.github/workflows/: ccpp.yml
benchmark/: BoxArray.h  BoxArray.inl  CMakeLists.txt  Face.h  FaceBoxConverter.h  FaceIntersector.h  MortonCurveBench.cpp  Rng.h  Scheduler.h  main.cpp
disasm/: Makefile  MortonCurve.cpp  MortonCurve.s
doxygen/: GettingStarted.md  README.md
examples/: Basic.cpp  CMakeLists.txt  CubeOfSpheres.cpp  Log.h  ObjFile.cpp  SimpleScheduler.h  Sphere.h  Stopwatch.h  tiny_obj_loader.h
include/: FastBVH.h
include/FastBVH/: Array.h  BBox.h  BVH.h  BuildStrategy.h  BuildStrategy1.h  Config.h  Intersection.h  IntersectionInfo.h  Iterable.h  Memory.h  MortonCurve.h  Object.h  Ray.h  Traverser.h  Types.h  Vector3.h
include/FastBVH/impl/: Array.h  BuildStrategy1.inl  BuildStrategy2.inl  Config.h  Memory.h  MortonCodec.h  MortonCodec.inl  MortonCurve.h  MortonCurve.inl  MortonTable.h  MortonTable.inl  MortonTraits.h  Types.h  VectorPacket.h  VectorPacket.inl
include/fast_bvh/: BBox.h  BVH.h  IntersectionInfo.h  Object.h  Ray.h  Stopwatch.h  Traverser.h  Vector3.h
tests/: BuildStrategy.cpp  BuildStrategy.cxx  CMakeLists.txt  Clz.cpp  MortonCurveTest.cpp  MortonCurveTest.cxx  MortonEncoderTest.cxx  Primitive.h
